--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-CN" prefix="og: https://ogp.me/ns#" data-lg-smooth="">
 
 <head>
@@ -771,7 +771,7 @@
               <br>
               我自己的博客网站，我为自己代言
               <br>
-              2026 不见不散
+              2026 新年快乐
             </div>
 
             <!-- .s__text -->
@@ -832,12 +832,12 @@
 
           <div class="s__ruler js-ruler"></div>
 
-          <!-- <a class="btn-cta s__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="login_in\login.html"
+          <a class="btn-cta s__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="login_in\index.html"
             data-plr-component="btn-cta">
             <span class="btn-cta__inner"> 进入 </span>
 
             <span class="btn-cta__ruler js-ruler"></span>
-          </a> -->
+          </a>
 
           <div class="s__background">
             <div class="s__time s__time--top">
@@ -1329,17 +1329,12 @@
                 Mo小窝
               </h2>
 
-              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="#"
-                data-plr-component="btn-cta">
-                <span class="btn-cta__inner"> 2026不见不散 </span>
-                <span class="btn-cta__ruler js-ruler"></span>
-              </a>
-<!-- 
-              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="login_in\login.html"
+          
+              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="login_in\index.html"
               data-plr-component="btn-cta">
               <span class="btn-cta__inner"> 立即进入 </span>
               <span class="btn-cta__ruler js-ruler"></span>
-            </a> -->
+            </a>
 
 
 
@@ -1360,22 +1355,7 @@
     <footer class="site-foot" data-plr-component="site-foot">
       <div class="u-container">
         <div class="b-foot" data-plr-component="b-foot">
-          <div class="b__creds">©2025 Momo同学 end</div>
-
-          <!-- <ul id="menu-legal-menu-1" class="b__legals">
-              <li
-                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-privacy-policy menu-item-63 js-item"
-              >
-                <a
-                  rel="privacy-policy"
-                  href="legal-notice/index.htm"
-                  class="menu-link js-link t-link"
-                  ><span class="menu-item__text" data-text="Legal Notice"
-                    >Legal Notice</span
-                  ></a
-                >
-              </li>
-            </ul> -->
+          <div class="b__creds">©2026 Momo同学 </div>
 
 
           <!-- .site-foot__credits -->
