--- a/login_in/login.html
+++ b/login_in/login.html
@@ -238,7 +238,7 @@ loginBtn.value = "登录";
 	<!--//main-->
 	<!--footer-->
 	<div class="footer">
-		<p>&copy; 2025 Momo的小破站 版权所有 | <a target="_blank" href="https://github.com/Risker21" title="Momo同学">Momo同学</a>
+		<p>&copy; 2026 Mo小窝 版权所有 | <a target="_blank" href="https://github.com/Risker21" title="Momo同学">Momo同学</a>
 		</p>
 	</div>
 	<!--//footer-->
