--- a/login_in/pop_up_generator/index.html
+++ b/login_in/pop_up_generator/index.html
@@ -34,7 +34,7 @@
     <!-- 背景音乐 -->
     <audio id="backgroundMusic" loop>
         <source
-            src="https://aqqmusic.tc.qq.com/M500001VgJKK007rmi.mp3?guid=1411289838&vkey=19C9FAA6E64719458D79517B701D41E39BE9CFC73FC96D8D8356EE9DE36B097E7D782E06A3C016394095188E424B50F997FCFAAD66B9E4E0__v21ebdd78f&uin=&fromtag=120042&src=M5000021GsX22S2Q7M.mp3"
+            src="../link/music/一路生花.mp3"
             type="audio/mpeg">
         您的浏览器不支持音频元素。
     </audio>
