--- a/login_in/index.html
+++ b/login_in/index.html
@@ -16,7 +16,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel="canonical" href="https://risker21.github.io/mo" />
-    <title>莫莫不做牛马</title>
+    <title>Mo小窝</title>
     <!--网站图标-->
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <!--网站图标-->
