--- a/login_in/game/Christmas/index.html
+++ b/login_in/game/Christmas/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../../images/favicon.jpg" type="image/x-icon">
     <title>手势圣诞</title>
     <!-- 引入多种字体：Great Vibes(英手写), Ma Shan Zheng(中毛笔), Long Cang(中草书) -->
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Ma+Shan+Zheng&family=Long+Cang&family=Noto+Sans+SC:wght@700&family=ZCOOL+KuaiLe&family=Pacifico&display=swap" rel="stylesheet">
