--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 
           <div class="s__ruler js-ruler"></div>
 
-          <a class="btn-cta s__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="login_in\index.html"
+          <a class="btn-cta s__cta btn-cta--plain btn-cta--secondary btn-cta--lg" href="login_in\login.html"
             data-plr-component="btn-cta">
             <span class="btn-cta__inner"> 进入 </span>
 
