--- a/index.html
+++ b/index.html
@@ -1330,7 +1330,7 @@
               </h2>
 
           
-              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="login_in\index.html"
+              <a class="btn-cta s__cta js-cta btn-cta--plain btn-cta--primary btn-cta--2xl" href="login_in\login.html"
               data-plr-component="btn-cta">
               <span class="btn-cta__inner"> 立即进入 </span>
               <span class="btn-cta__ruler js-ruler"></span>
