--- a/login_in/index.html
+++ b/login_in/index.html
@@ -214,7 +214,7 @@
                             <span class="color">对代码没有任何想法</span>
                             的追光者 </span>
                         <br>
-                        <span class="about-second-line">目标是可以能有做全栈的能力</span>
+                        <span class="about-second-line">目标是有做全栈的能力</span>
                         <div class="cv">
                             <a href="./link/self_introduction.html"><button>点击<span
                                         class="colors"></span>了解更多</button></a>
