--- a/login_in/link/self_introduction.html
+++ b/login_in/link/self_introduction.html
@@ -22,15 +22,15 @@
   <div id="particles-js"></div>
 
   <div class="loader">
-    <span>Momo</span>
-    <span>同</span>
-    <span>学</span>
-    <span>欢</span>
-    <span>迎</span>
-    <span>你</span>
-    <span>的</span>
-    <span>到</span>
-    <span>来</span>
+    <span>正</span>
+    <span>在</span>
+    <span>努</span>
+    <span>力</span>
+    <span>加</span>
+    <span>载</span>
+    <span>中</span>
+    <span>···</span>
+    <span>···</span>
 
   </div>
 
@@ -288,7 +288,7 @@
     </main>
 
     <footer class="copyright-footer">
-      <p>© 2025 Momo的小破站</p>
+      <p>© 2026 Mo小窝</p>
     </footer>
   </div>
 
