--- a/login_in/link/self_introduction.html
+++ b/login_in/link/self_introduction.html
@@ -62,10 +62,10 @@
         <h1>Momo同学</h1>
         <p class="title">全栈工程师</p>
         <div class="social-links">
-          <a href="https://github.com/Risker21" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="https://github.com/Risker21" ><i class="fab fa-github"></i></a>
           <a href="https://x.com/bobbob1571370"><img src="../images/R-C.png" alt="Twitter"
               style="width:24px;height:24px;vertical-align:middle;border-radius: 50%;"></a>
-          <a href="../link/WeChat.html" target="_blank"><i class="fab fa-weixin"></i></a>
+          <a href="../link/WeChat.html" ><i class="fab fa-weixin"></i></a>
         </div>
       </div>
     </header>
@@ -259,7 +259,7 @@
             <div class="project-info">
               <h3>电商网站</h3>
               <p>使用React和Node.js构建的功能电商平台</p>
-              <a href="./test.html" class="project-link" target="_blank">查看详情</a>
+              <a href="./test.html" class="project-link" >查看详情</a>
             </div>
           </div>
           <div class="project-card">
@@ -269,7 +269,7 @@
             <div class="project-info">
               <h3>数据分析仪表盘</h3>
               <p>使用Vue.js和D3.js构建的数据可视化工具</p>
-              <a href="./test.html" class="project-link" target="_blank">查看详情</a>
+              <a href="./test.html" class="project-link" >查看详情</a>
             </div>
           </div>
         </div>
