--- a/index.html
+++ b/index.html
@@ -1315,11 +1315,13 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              有风的地方
+              人生无所谓
               <br>
-              你依然在
+              得失
               <br>
-              对吗？
+              毕竟从未
+              <br>
+              拥有
             </div>
             <!-- .s__intro__text -->
           </div>
