--- a/login_in/index.html
+++ b/login_in/index.html
@@ -713,7 +713,7 @@
                     <div class="form-header">
                         建议
                     </div>
-                    <form id="myForm" action="https://formsubmit.co/cvkvkckkfkf@gmail.com" method="POST">
+                    <form id="myForm" action="https://formsubmit.co/mo@momo21.online" method="POST">
                         <input type="hidden" name="_subject" value="网站联系表单提交">
                         <input type="hidden" name="_template" value="table">
                         <div class="input-line">
@@ -763,7 +763,7 @@
                             <img src="./images/icon-email.png" class="icon" alt="email-icon">
                             <div class="contact-info-icon-text">
                                 <h6>邮箱</h6>
-                                <p>riskermo@gmail.com</p>
+                                <p>mo@momo21.online</p>
                             </div>
                         </div>
                     </div>
