--- a/login_in/link/test.html
+++ b/login_in/link/test.html
@@ -109,7 +109,7 @@
         </div>
         
         <div class="contact">
-            有任何问题请联系我们: riskermo@gmail.com
+            有任何问题请联系我们: mo@momo21.online
         </div>
         <div class="nav-links" style="margin-top: 20px;">
             
