--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 </head>
 
 <body class="home wp-singular page-template-default page page-id-8 wp-theme-creatorspc">
-  <audio id="bgMusic" src="login_in\link\music\再一次爱你.mp3" loop preload="auto"></audio>
+  <audio id="bgMusic" src="login_in\link\music\去年夏天.mp3" loop preload="auto"></audio>
 
   <script>
     (function () {
@@ -193,8 +193,10 @@
         data-images='["https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Gabrielle-Current-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kelle-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kennedy-Ryon-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Mannywellz-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Trey-Kams-Release-Secured-720x720.jpeg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/King-Cooley-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Austin-Brown-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Yancy-Abri-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Linus-Hablot-Release-Secured-720x720.jpg","https:\/\/247artists.com\/wp-content\/uploads\/2025\/02\/Kelkoe-720x720.jpg"]'>
         <div class="s__inner js-inner">
           <h1 class="s__title js-title">
-            心之所动
-            <br />就随风去了
+            人生是旷野
+            <br>祝你
+            <br>也愿我
+            <br />自由如风
           </h1>
           <canvas class="s__canvas js-canvas"></canvas>
         </div>
@@ -1105,7 +1107,7 @@
             <div class="sb-faq js-faq">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  大灰狼为什么一直盯着小绵羊看？
+                  为什么螃蟹不看电影？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1115,7 +1117,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    因为它在玩“羊了个羊”。
+                    因为它们喜欢横着看（横屏），但电影院只有竖屏。
                   </span>
                 </span>
               </dd>
@@ -1123,7 +1125,7 @@
             <div class="sb-faq js-faq">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  谁可以在晚上七点去摘星星？
+                  为什么北极熊不吃企鹅？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1133,7 +1135,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    七点（Seven O'clock）是时间，不是人！
+                    因为北极熊在北极，企鹅在南极，太远了，配送费太贵。
                   </span>
                 </span>
               </dd>
@@ -1141,7 +1143,7 @@
             <div class="sb-faq js-faq">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  “音乐家”究竟代表什么？
+                  哪种花最没力气？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1151,7 +1153,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    它代表能把“休止符”谱写得最长，让你听起来觉得世界都安静了。
+                    茉莉花。因为：好一朵美丽（没力）的茉莉花。
                   </span>
                 </span>
               </dd>
@@ -1159,7 +1161,7 @@
             <div class="sb-faq js-faq">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  为什么煎鸡蛋不喜欢听笑话？
+                  你知道我最大的缺点是什么吗？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1169,7 +1171,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    因为会“蛋疼”呀。
+                    是缺点你。
                   </span>
                 </span>
               </dd>
@@ -1187,7 +1189,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    “谁”沉默了
+                    “谁”（水）沉默了
                   </span>
                 </span>
               </dd>
@@ -1195,7 +1197,7 @@
             <div class="sb-faq js-faq">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  使用一个普通钱包需要加密货币吗？
+                  你知道为什么企鹅只有肚子是白的吗？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1205,7 +1207,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    起步不需要。它只需要法币，以及一个勇气来面对你的余额。
+                    因为它们手短，洗澡只能洗到前面……就像我，手长也够不到你，只能一直想你。
                   </span>
                 </span>
               </dd>
@@ -1213,7 +1215,7 @@
             <div class="sb-faq js-faq">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  粉丝共持有冷笑话有哪些好处？
+                  哪种职业最容易感冒？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1223,7 +1225,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    粉丝不再只是听众，而是冷场者；他们可以获得独家“冷”内容，甚至分享到周围人群的沉默。
+                    厨师。因为他整天在“炒（吵）菜”，风很大。
                   </span>
                 </span>
               </dd>
@@ -1231,7 +1233,7 @@
             <div class="sb-faq js-faq is-hidden">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  可以把一整天都变成笑话吗？
+                  为什么影子总是跟着你？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1241,7 +1243,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    当然。你醒来的每一天，都可以选择把它变成一个笑话，无论是“冷”的还是“热”的。
+                    因为它也怕黑。
                   </span>
                 </span>
               </dd>
@@ -1249,7 +1251,7 @@
             <div class="sb-faq js-faq is-hidden">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  笑点如何分成？
+                  为什么减肥总是“明天”的事？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1259,7 +1261,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    笑话一说出口即可设定链下自动分成，沉默、尴尬和翻白眼的比例会自动进入听众的表情包里。
+                    因为“今天”的火锅、奶茶和烧烤实在是太无辜了，不能辜负它们。
                   </span>
                 </span>
               </dd>
@@ -1267,7 +1269,7 @@
             <div class="sb-faq js-faq is-hidden">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  粉丝可以转售冷笑话吗？
+                  为什么程序员下班总是很晚？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1277,7 +1279,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    可以。你每次转述，都可以给原作者支付“一记白眼”作为版税。
+                    因为他们要在路灯下找 Bug，因为那里比较亮。
                   </span>
                 </span>
               </dd>
@@ -1285,7 +1287,7 @@
             <div class="sb-faq js-faq is-hidden">
               <dt class="sb__question js-question">
                 <span class="sb__question__inner">
-                  如何取消或暂停“认真生活”的会员？
+                  为什么冷笑话到这就结束了？
                 </span>
                 <div class="sb__toggle">
                   <div class="sb__toggle__open"></div>
@@ -1295,7 +1297,7 @@
               <dd class="sb__answer js-answer">
                 <span class="sb__answer__outer">
                   <span class="sb__answer__inner">
-                    你可以在你的“人生控制台”的“Settings & Sanity”随时管理或取消订阅，随时欢迎回来加入“幽默浪潮”。
+                    因为剩下的···嗯···嗯···嗯···，需要你亲自去跟ta说。
                   </span>
                 </span>
               </dd>
@@ -1315,13 +1317,7 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              人生无所谓
-              <br>
-              得失
-              <br>
-              毕竟从未
-              <br>
-              拥有
+             你准备好了吗
             </div>
             <!-- .s__intro__text -->
           </div>
