--- a/login_in/index.html
+++ b/login_in/index.html
@@ -74,17 +74,17 @@
             <div id="particles"></div>
             <!--社交媒体链接-->
             <div class="social-media-links">
-                <a href="https://www.douyin.com/user/MS4wLjABAAAA0XSGvjUy5BlndvX32Q6wvQIakUDCcIov3_VxU9OOV54?from_tab_name=main"
+                <a  href="https://www.douyin.com/user/MS4wLjABAAAA0XSGvjUy5BlndvX32Q6wvQIakUDCcIov3_VxU9OOV54?from_tab_name=main" target="_blank"
                     ><img src="./images/抖音.png" class="social-media" alt="douyin-logo"></a>
-                <a href="https://www.youtube.com/@Riskermo" ><img src="images/youtube.png"
-                        class="social-media" alt="youtube-logo"></a>
-                <a href="https://x.com/bobbob1571370" ><img src="images/推特.svg" class="social-media"
-                        alt="twitter-logo"></a>
+                <a href="https://www.youtube.com/@Riskermo" target="_blank"
+                    ><img src="images/youtube.png" class="social-media" alt="youtube-logo"></a>
+                <a href="https://x.com/bobbob1571370" target="_blank"
+                    ><img src="images/推特.svg" class="social-media" alt="twitter-logo"></a>
             </div>
             <!--社交媒体链接结束-->
             <div class="header-content">
                 <div class="header-content-box">
-                    <div class="firstline"><span class="color">Momo同学</span> <span style="color: aqua;">祝你今天愉快！</span>
+                    <div class="firstline"><span class="color">Momo</span> <span style="color: aqua;">祝你今天愉快！</span>
                     </div>
                     <div class="secondline"
                         style="height: 30px; display: flex; align-items: center; justify-content: center;">
@@ -214,9 +214,9 @@
                             <span class="color">对代码没有任何想法</span>
                             的追光者 </span>
                         <br>
-                        <span class="about-second-line">目标是有做全栈的能力</span>
+                        <span class="about-second-line">希望自己尽快能有做全栈的能力</span>
                         <div class="cv">
-                            <a href="./link/self_introduction.html"><button>点击<span
+                            <a href="./link/self_introduction.html" target="_blank"><button>点击<span
                                         class="colors"></span>了解更多</button></a>
                         </div>
                     </div>
@@ -417,7 +417,7 @@
                     <div class="portfolio-text">
                         <h2>科技日常</h2>
                         <p>分享数码产品的实用技巧，拆解前沿技术的生活化应用，记录智能工具带来的小改变，让硬核科技融入日常，感受科技温度。</p>
-                        <div class="button"><a href="./link/test.html" ><button><span
+                        <div class="button"><a href="./link/test.html" target="_blank" ><button><span
                                         class="index">进入专区<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -428,7 +428,7 @@
                     <div class="portfolio-text">
                         <h2>思绪日常</h2>
                         <p>记录那些一闪而过的念头：或许是清晨窗台的光影联想，深夜独处的情绪碎片，又或是对一件小事的深度琢磨，让零散思考有处安放</p>
-                        <div class="button"><a href="./link/test.html" ><button><span
+                        <div class="button"><a href="./link/test.html" target="_blank"><button><span
                                         class="index">进入专区<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -451,7 +451,7 @@
                     <div class="portfolio-text">
                         <h2>阅读日常</h2>
                         <p>拆解文字里的万千世界：一本书的某句共鸣，不同观点的碰撞思考，甚至是读错段落的乌龙感悟，让阅读成为与自己对话的方式。</p>
-                        <div class="button"><a href="./link/test.html" ><button><span
+                        <div class="button"><a href="./link/test.html" target="_blank"><button><span
                                         class="index">进入专区<i class="gg-arrow-right"></i></span></button></a></div>
                     </div>
                 </div>
@@ -503,7 +503,7 @@
 
             <div class="blog-content">
                                 <div class="blogs">
-                    <a href="./game/Christmas/index.html" >
+                    <a href="./game/Christmas/index.html" target="_blank" >
                         <div class="img">
                             <img src="images/圣诞.webp" alt="blog-six">
                             <div class="blog-date">浪漫</div>
@@ -523,7 +523,7 @@
                 </div>
 
                 <div class="blogs">
-                    <a href="./image_fancy/index.html" >
+                    <a href="./image_fancy/index.html" target="_blank">
                         <div class="img">
                             <img src="images/post-one.webp" alt="blog-one">
                             <div class="blog-date">浪漫</div>
@@ -540,7 +540,7 @@
                     </a>
                 </div>
                 <div class="blogs">
-                    <a href="./lovestory/index.html" >
+                    <a href="./lovestory/index.html" target="_blank">
                         <div class="img">
                             <img src="images/post-two.webp" alt="blog-two">
                             <div class="blog-date">浪漫</div>
@@ -556,7 +556,7 @@
                     </a>
                 </div>
                 <div class="blogs">
-                    <a href="./travel_plane/index.html" >
+                    <a href="./travel_plane/index.html" target="_blank">
                         <div class="img">
                             <img src="images/post-three.webp" alt="blog-three">
                             <div class="blog-date">浪漫</div>
@@ -575,7 +575,7 @@
                     </a>
                 </div>
                 <div class="blogs">
-                    <a href="./video_and_audio/video.html" >
+                    <a href="./video_and_audio/video.html" target="_blank">
                         <div class="img">
                             <img src="images/post-four.webp" alt="blog-four">
                             <div class="blog-date">实用</div>
@@ -591,7 +591,7 @@
                     </a>
                 </div>
                 <div class="blogs">
-                    <a href="./game/Tetris/index.html" >
+                    <a href="./game/Tetris/index.html" target="_blank">
                         <div class="img">
                             <img src="./images/game.webp" alt="blog-five">
                             <div class="blog-date">娱乐</div>
@@ -606,7 +606,7 @@
                     </a>
                 </div>
                 <div class="blogs">
-                    <a href="./game/Gomoku/index.html" >
+                    <a href="./game/Gomoku/index.html" target="_blank">
                         <div class="img">
                             <img src="./game/Gomoku/image/点击图.png" alt="blog-six">
                             <div class="blog-date">娱乐</div>
@@ -624,7 +624,7 @@
                 </div>
 
                 <div class="blogs">
-                    <a href="./pop_up_generator/index.html" >
+                    <a href="./pop_up_generator/index.html" target="_blank">
                         <div class="img">
                             <img src="./pop_up_generator/image/点击.png" alt="blog-six">
                             <div class="blog-date">娱乐</div>
@@ -643,13 +643,13 @@
 
 
                 <div class="blogs">
-                    <a href="./link/test.html" >
+                    <a href="./link/test.html" target="_blank">
                         <div class="img">
                             <img src="images/post-five.jpg" alt="blog-six">
-                            <div class="blog-date">闲置位</div>
+                            <div class="blog-date">专属位</div>
                         </div>
                         <div class="blog-text">
-                            <h3>啥也没有哦</h3>
+                            <h3>只为特殊的人</h3>
                             <p>
                                 <strong style="color: #28bb68; font-size: 23px;">(*≧︶≦)、(￣▽￣* )ゞ</strong>
                                 <br>
@@ -748,7 +748,7 @@
                             <img src="./images/icon-location.png" class="icon" alt="location-icon">
                             <div class="contact-info-icon-text">
                                 <h6>位置</h6>
-                                <p>中国，重庆</p>
+                                <p>中国·重庆</p>
                             </div>
                         </div>
                         <div class="contect-info-content-line">
@@ -856,6 +856,8 @@
         style="position: fixed; bottom: 20px; right: 20px; width: 50px; height: 50px; cursor: pointer; z-index: 1000; transition: all 0.3s ease; border-radius: 50%; box-shadow: 0 2px 10px rgba(0,0,0,0.2);">
     <script>
         const musicFiles = [
+            '最好的我.mp3',
+            '去年夏天.mp3',
             '鱼仔.mp3',
             '飞鸟和蝉.mp3',
             '错位时空.mp3',
