--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,8 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              你准备好了吗
+              别睡了
+<br>这不是尽头
             </div>
             <!-- .s__intro__text -->
           </div>
