--- a/index.html
+++ b/index.html
@@ -1327,7 +1327,7 @@
         <div class="s__inner">
           <div class="s__intro js-intro">
             <div class="s__intro__text t-title js-intro-title">
-              别睡了
+              别睡着了
 <br>这不是尽头
             </div>
             <!-- .s__intro__text -->
